README Launch instructions, features and how to play